--- a/BFS & DFS/.settings/org.eclipse.core.resources.prefs
+++ b/BFS & DFS/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/Network/Network.java=UTF-8
+encoding//src/PermutationCycle=UTF-8
 encoding//src/PermutationCycle/PermutationCycle.java=UTF-8
+encoding/<project>=UTF-8
