--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "java.project.encoding": "setDefault"
+    "java.project.encoding": "setDefault",
+    "java.debug.settings.onBuildFailureProceed": true
 }
